tests/syntax/bad/testfile-var-7.go
package main

func main() { x, y.z := 1, 2 }
